--- a/haotian.tex
+++ b/haotian.tex
@@ -19,7 +19,7 @@
 %% See http://texdoc.net/pkg/fontawesome5 for full list of symbols.
 
 % Change the page layout if you need to
-\geometry{left=1.25cm,right=1.25cm,top=1.5cm,bottom=1.5cm,columnsep=1.2cm}
+\geometry{left=1cm,right=1cm,top=1cm,bottom=1cm,columnsep=1cm}
 
 % The paracol package lets you typeset columns of text in parallel
 \usepackage{paracol}
@@ -28,7 +28,7 @@
 % you're using pdflatex or xelatex/lualatex
 \ifxetexorluatex
   % If using xelatex or lualatex:
-  \setmainfont{Roboto Slab}
+  \setmainfont{Carlito}
   \setsansfont{Lato}
   \renewcommand{\familydefault}{\sfdefault}
 \else
@@ -39,18 +39,13 @@
   \renewcommand{\familydefault}{\sfdefault}
 \fi
 
+
 % Change the colours if you want to
+\definecolor{VividPurple}{HTML}{140E77}
 \definecolor{SlateGrey}{HTML}{2E2E2E}
 \definecolor{LightGrey}{HTML}{666666}
-\definecolor{DarkPastelRed}{HTML}{450808}
-\definecolor{PastelRed}{HTML}{8F0D0D}
-\definecolor{GoldenEarth}{HTML}{E7D192}
-\colorlet{name}{black}
-\colorlet{tagline}{PastelRed}
-\colorlet{heading}{DarkPastelRed}
-\colorlet{headingrule}{GoldenEarth}
-\colorlet{subheading}{PastelRed}
-\colorlet{accent}{PastelRed}
+\colorlet{heading}{VividPurple}
+\colorlet{accent}{VividPurple}
 \colorlet{emphasis}{SlateGrey}
 \colorlet{body}{LightGrey}
 
@@ -67,23 +62,15 @@
 \renewcommand{\ratingmarker}{\faCircle}
 
 %% Use (and optionally edit if necessary) this .cfg if you
-%% want to use an author-year reference style like APA(6)
-%% for your publication list
-\input{pubs-authoryear.cfg}
-
-%% Use (and optionally edit if necessary) this .cfg if you
 %% want an originally numerical reference style like IEEE
 %% for your publication list
 % \input{pubs-num.cfg}
-
-%% sample.bib contains your publications
-\addbibresource{sample.bib}
 
 \begin{document}
 \name{Your Name Here}
 \tagline{Your Position or Tagline Here}
 %% You can add multiple photos on the left or right
-\photoR{2.8cm}{Globe_High}
+% \photoR{2.8cm}{photo}
 % \photoL{2.5cm}{Yacht_High,Suitcase_High}
 
 \personalinfo{%
@@ -127,141 +114,112 @@
 % Start a 2-column paracol. Both the left and right columns will automatically
 % break across pages if things get too long.
 \begin{paracol}{2}
-\cvsection{Experience}
+  \cvsection{Experience}
 
-\cvevent{Job Title 1}{Company 1}{Month 20XX -- Ongoing}{Location}
-\begin{itemize}
-\item Job description 1
-\item Job description 2
-\end{itemize}
+  \cvevent{Job Title 1}{Company 1}{Month 20XX -- Ongoing}{Location}
+  \begin{itemize}
+    \item Job description 1
+    \item Job description 2
+  \end{itemize}
 
-\divider
+  \divider
 
-\cvevent{Job Title 2}{Company 2}{Month 20XX -- Ongoing}{Location}
-\begin{itemize}
-\item Job description 1
-\item Job description 2
-\end{itemize}
+  \cvevent{Job Title 2}{Company 2}{Month 20XX -- Ongoing}{Location}
+  \begin{itemize}
+    \item Job description 1
+    \item Job description 2
+  \end{itemize}
 
-\cvsection{Projects}
+  \cvsection{Projects}
 
-\cvevent{Project 1}{Funding agency/institution}{}{}
-\begin{itemize}
-\item Details
-\end{itemize}
+  \cvevent{Project 1}{Funding agency/institution}{}{}
+  \begin{itemize}
+    \item Details
+  \end{itemize}
 
-\divider
+  \divider
 
-\cvevent{Project 2}{Funding agency/institution}{Project duration}{}
-A short abstract would also work.
+  \cvevent{Project 2}{Funding agency/institution}{Project duration}{}
+  A short abstract would also work.
 
-\medskip
+  \medskip
 
-\cvsection{A Day of My Life}
+  \cvsection{A Day of My Life}
 
-% Adapted from @Jake's answer from http://tex.stackexchange.com/a/82729/226
-% \wheelchart{outer radius}{inner radius}{
-% comma-separated list of value/text width/color/detail}
-\wheelchart{1.5cm}{0.5cm}{%
+  % Adapted from @Jake's answer from http://tex.stackexchange.com/a/82729/226
+  % \wheelchart{outer radius}{inner radius}{
+  % comma-separated list of value/text width/color/detail}
+  \wheelchart{1.5cm}{0.5cm}{%
   6/8em/accent!30/{Sleep,\\beautiful sleep},
   3/8em/accent!40/Hopeful novelist by night,
   8/8em/accent!60/Daytime job,
   2/10em/accent/Sports and relaxation,
   5/6em/accent!20/Spending time with family
-}
+  }
 
-% use ONLY \newpage if you want to force a page break for
-% ONLY the current column
-\newpage
 
-\cvsection{Publications}
 
-\nocite{*}
+  %% Switch to the right column. This will now automatically move to the second
+  %% page if the content is too long.
+  \switchcolumn
 
-\printbibliography[heading=pubtype,title={\printinfo{\faBook}{Books}},type=book]
+  \cvsection{My Life Philosophy}
 
-\divider
+  \begin{quote}
+    ``Something smart or heartfelt, preferably in one sentence.''
+  \end{quote}
 
-\printbibliography[heading=pubtype,title={\printinfo{\faFile*[regular]}{Journal Articles}},type=article]
+  \cvsection{Most Proud of}
 
-\divider
+  \cvachievement{\faTrophy}{Fantastic Achievement}{and some details about it}
 
-\printbibliography[heading=pubtype,title={\printinfo{\faUsers}{Conference Proceedings}},type=inproceedings]
+  \divider
 
-%% Switch to the right column. This will now automatically move to the second
-%% page if the content is too long.
-\switchcolumn
+  \cvachievement{\faHeartbeat}{Another achievement}{more details about it of course}
 
-\cvsection{My Life Philosophy}
+  \divider
 
-\begin{quote}
-``Something smart or heartfelt, preferably in one sentence.''
-\end{quote}
+  \cvachievement{\faHeartbeat}{Another achievement}{more details about it of course}
 
-\cvsection{Most Proud of}
+  \cvsection{Strengths}
 
-\cvachievement{\faTrophy}{Fantastic Achievement}{and some details about it}
+  \cvtag{Hard-working}
+  \cvtag{Eye for detail}\\
+  \cvtag{Motivator \& Leader}
 
-\divider
+  \divider\smallskip
 
-\cvachievement{\faHeartbeat}{Another achievement}{more details about it of course}
+  \cvtag{C++}
+  \cvtag{Embedded Systems}\\
+  \cvtag{Statistical Analysis}
 
-\divider
+  \cvsection{Languages}
 
-\cvachievement{\faHeartbeat}{Another achievement}{more details about it of course}
+  \cvskill{English}{5}
+  \divider
 
-\cvsection{Strengths}
+  \cvskill{Spanish}{4}
+  \divider
 
-\cvtag{Hard-working}
-\cvtag{Eye for detail}\\
-\cvtag{Motivator \& Leader}
+  \cvskill{German}{3.5} %% Supports X.5 values.
 
-\divider\smallskip
+  %% Yeah I didn't spend too much time making all the
+  %% spacing consistent... sorry. Use \smallskip, \medskip,
+  %% \bigskip, \vspace etc to make adjustments.
+  \medskip
 
-\cvtag{C++}
-\cvtag{Embedded Systems}\\
-\cvtag{Statistical Analysis}
+  \cvsection{Education}
 
-\cvsection{Languages}
+  \cvevent{Ph.D.\ in Your Discipline}{Your University}{Sept 2002 -- June 2006}{}
+  Thesis title: Wonderful Research
 
-\cvskill{English}{5}
-\divider
+  \divider
 
-\cvskill{Spanish}{4}
-\divider
+  \cvevent{M.Sc.\ in Your Discipline}{Your University}{Sept 2001 -- June 2002}{}
 
-\cvskill{German}{3.5} %% Supports X.5 values.
+  \divider
 
-%% Yeah I didn't spend too much time making all the
-%% spacing consistent... sorry. Use \smallskip, \medskip,
-%% \bigskip, \vspace etc to make adjustments.
-\medskip
-
-\cvsection{Education}
-
-\cvevent{Ph.D.\ in Your Discipline}{Your University}{Sept 2002 -- June 2006}{}
-Thesis title: Wonderful Research
-
-\divider
-
-\cvevent{M.Sc.\ in Your Discipline}{Your University}{Sept 2001 -- June 2002}{}
-
-\divider
-
-\cvevent{B.Sc.\ in Your Discipline}{Stanford University}{Sept 1998 -- June 2001}{}
-
-% \divider
-
-\cvsection{Referees}
-
-% \cvref{name}{email}{mailing address}
-\cvref{Prof.\ Alpha Beta}{Institute}{a.beta@university.edu}
-{Address Line 1\\Address line 2}
-
-\divider
-
-\cvref{Prof.\ Gamma Delta}{Institute}{g.delta@university.edu}
-{Address Line 1\\Address line 2}
+  \cvevent{B.Sc.\ in Your Discipline}{Stanford University}{Sept 1998 -- June 2001}{}
 
 
 \end{paracol}
