CV Content : Add items and briefs

--- a/altacv.cls
+++ b/altacv.cls
@@ -295,6 +295,32 @@
   \medskip\normalsize
 }
 
+\newcommand{\cvcorp}[4]{%
+  \makebox[0.5\linewidth][l]{\large\color{emphasis}#1}#2\par
+  \smallskip\normalsize
+  \ifstrequal{#3}{}{}{{\small\makebox[0.5\linewidth][l]{\faCalendar\hspace{0.5em}#3}}}%
+  \ifstrequal{#4}{}{}{{\small\makebox[0.5\linewidth][l]{\faMapMarker\hspace{0.5em}#4}}}\par
+  \medskip\normalsize
+}
+
+\newcommand{\cvproject}[2]{%
+  \ifstrequal{#1}{}{}{
+  \textbf{\color{accent}#1}\par
+  \smallskip}
+  \textit{#2}
+  \smallskip
+}
+
+\newcommand{\cvedu}[4]{%
+  {\large\color{emphasis}#1\par}  \smallskip\normalsize
+  \ifstrequal{#2}{}{}{
+  \textbf{\color{accent}#2}\par
+  \smallskip}
+  \ifstrequal{#3}{}{}{{\small\makebox[0.5\linewidth][l]{\faCalendar\hspace{0.5em}#3}}}%
+  \ifstrequal{#4}{}{}{{\small\makebox[0.5\linewidth][l]{\faGraduationCap\hspace{0.5em}#4}}}\par
+  \medskip\normalsize
+}
+
 \newcommand{\cvachievement}[3]{%
   \begin{tabularx}{\linewidth}{@{}p{2em} @{\hspace{1ex}} >{\raggedright\arraybackslash}X@{}}
   \multirow{2}{*}{\Large\color{accent}#1} & \bfseries\textcolor{emphasis}{#2}\\
