--- a/haotian.tex
+++ b/haotian.tex
@@ -113,23 +113,25 @@
 
   \cvcorp{Amazon}{SDE Fulltime}{Jul 2020 - Present}{Seattle}
 
-  \cvproject{Seller LeveL CIV\footnote[1]{CIV : Consumer Instock Value, an economic concept that evaluates long-term impact of a retail offer instock status change} for Amazon.in} {Provide CIV estimates for more than 120,000 sellers in India separately}
+  \cvproject{Seller LeveL CIV\footnote[1]{CIV : Consumer Instock Value, an economic concept that evaluates long-term impact of a retail offer instock status change} for Amazon.in} {Provide CIV estimates for more than 120,000 sellers in India}
   \begin{itemize}
-    \item Build entire data pipeline from ... to ... . automated the pipeline based on AWS Step Function in Python
+    \item Build and automate backend data pipeline which includes . automated the pipeline based on AWS Step Function in Python
+    \item Work together with economists to develop machine learning model for Seller Level CIV.
     \item Design redshift table; implement ETL jobs in hql and scala to load data via EMR
     \item Refactor RESTful Service API to support seller-level granularity. use cache to increase ...
   \end{itemize}
 
   \cvproject{CIV Data Pipeline Infrastructure Optimization} {Greatly improved the performance, reliability and scalability of internal systems}
   \begin{itemize}
-    \item EMR-DDB Migration : DynamoDB import via EMR, 7 times faster
-    \item Lambda Function support, NAWS migration, get rid of hosts, severless
+    \item Migrate DynamoDB related operations from single host to EMR cluster. Distribute DDB operations to all executors by using Spark, 7 times faster.
+    \item Implement AWS Lambda Function support in current infrastructure, migrate backend system from hosts to serverless application.
   \end{itemize}
 
-  \cvproject{Contribution Profit Boost Pipeline Automation} {Reduced manual operation by 80\%. Shortened the entire process from 1 month to 5 days}
+  \cvproject{Contribution Profit Boost Process Automation} {Automate the CP Boost process cross three teams (CIV, Finance, data provider)}
   \begin{itemize}
     \item Coordinate \& implement this automated pipeline across multiple teams(...)
     \item use S3, StepFunction, Pandas, save 70\% of manual works during this process
+    \item Reduced manual operation by 80\%. Shortened the entire process from one month to 5 days
   \end{itemize}
 
   \divider
@@ -146,7 +148,7 @@
 
   \cvcorp{Carnegie Mellon University }{Capstone Project }{Jan 2020 - May 2020}{Pittsburgh}
 
-  \cvproject{Chatbot to Chatbot QA system  }{Automated chatbot that can make outbound call to IVR system, answer IVR\footnote[2]{IVR: Interactive Voice Response System} questions \& transfer call back to human}
+  \cvproject{Chatbot to Chatbot QA system  }{Automated chatbot that can make outbound call to IVR\footnote[2]{IVR: Interactive Voice Response System} system, answer IVR questions \& transfer call back to human}
   \begin{itemize}
     \item Integrated with Twillio APIs to make outbound / inbound call and get audio streams
     \item Integrate with Google Cloud Speech-to-Text API to transcribe audit stream in real-time
